--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@paulavery/module-template",
+  "name": "@paulavery/app",
   "version": "0.0.0",
-  "description": "A template for node modules",
-  "main": "lib/index.js",
+  "description": "A basic application framework",
+  "main": "lib/app.js",
   "license": "BSD-3-Clause",
   "author": {
     "name": "Florian Albertz",
@@ -10,21 +10,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PaulAvery/module-template.git"
+    "url": "https://github.com/PaulAvery/app.git"
   },
   "devDependencies": {
-    "@paulavery/docs": "^2.1.0",
-    "ava": "^0.14.0",
+    "@paulavery/docs": "^2.1.4",
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.2",
     "babel-plugin-transform-async-to-generator": "^6.7.4",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.8.0",
-    "nyc": "^6.4.0",
     "static-server": "^2.0.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1"
+    "@paulavery/config": "^1.0.1",
+    "@paulavery/events": "^2.0.1",
+    "@paulavery/logger": "^1.0.1",
+    "babel-runtime": "^6.6.1",
+    "merge": "^1.2.0"
   }
 }
